--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@ body {text-align:center;margin:0}
 
 <div id="text2" style="position:absolute; overflow:hidden; left:217px; top:805px; width:789px; height:121px; z-index:5">
 <div class="wpmd">
-<div align=justify style="line-height:1.50;"><font color="#000000" face="Sitka Text" class="ws12">I am a top master in the city, I am doing premium quality nails. I got my manicure degree from from the top manicure school in Moscow “Bagheera Nails”. I make any complexity nails, with any design that you wish. Also, I use premium quality gel, with hypoallergenic ingredients. My clients always leave contented, and never get poor manicure with allergies. I will be very glad to see you in my salon, the address you will find on the page “Contact”. Hope to see you soon!:)</font></div>
+<div align=justify style="line-height:1.50;"><font color="#000000" face="Sitka Text" class="ws12">I am a top master in the city, I am doing premium quality nails. I got my manicure degree from from the top manicure school in Moscow "Bagheera Nails". I make any complexity nails, with any design that you wish. Also, I use premium quality gel, with hypoallergenic ingredients. My clients always leave contented, and never get poor manicure with allergies. I will be very glad to see you in my salon, the address you will find on the page "Contact". Hope to see you soon!:)</font></div>
 <div align=justify style="line-height:1.50;"><font color="#000000" face="Sitka Text" class="ws12"><BR></font></div>
 <div align=justify style="line-height:1.50;"><font color="#000000" face="Sitka Text" class="ws9"><BR></font></div>
 </div></div>
